@@ -8,7 +8,7 @@
  *   pqxx::connection_base encapsulates a frontend to backend connection
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/connection_base instead.
  *
- * Copyright (c) 2001-2007, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2008, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -80,7 +80,8 @@ private:
  * @code operator()(const char[]) throw() @endcode
  * to process the message passed to it.
  */
-struct PQXX_LIBEXPORT noticer : PGSTD::unary_function<const char[], void>
+struct PQXX_LIBEXPORT PQXX_NOVTABLE noticer :
+  PGSTD::unary_function<const char[], void>
 {
   noticer(){}		// Silences bogus warning in some gcc versions
   virtual ~noticer() throw () {}
