@@ -8,7 +8,7 @@
  *   pqxx::sql_error, pqxx::broken_connection, pqxx::in_doubt_error, ...
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/except instead.
  *
- * Copyright (c) 2003-2007, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2003-2008, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -55,7 +55,7 @@ namespace pqxx
  * Bart Samwel points out, "catch" is subject to some nasty fineprint in such
  * cases.
  */
-class PQXX_LIBEXPORT pqxx_exception
+class PQXX_LIBEXPORT PQXX_NOVTABLE pqxx_exception
 {
 public:
   /// Support run-time polymorphism, and keep this class abstract
